--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div id="website">
 		<h1>Welcome to Serenity's Library</h1>
     <span><b>in which i make our entreprenuerial dreams come ✨false✨</b><br><br>(anti capitalism! this website is ugly on purpose for a more homemade, camp, youthful friendship, slowness and smallness as a form of resistance, rhetorically sophisticated subversive way!)</span>
-    <br>
+    <br><br><br>
   <section class="library">
     <!-- ROBOT ROW 1 -->
         <div class="container">
@@ -37,7 +37,7 @@
           <p>Attack on Titan</p>
           <div class="overlay">
             <div class="text">
-              giant naked humans eating other humans... how proverbial. this is in the library cuz jealous!levi fanfic.
+              giant naked humans eating other humans... how proverbial. this is in the library cuz jealous!levi fanfic. i can't believe we're done with high school. i won't miss heritage but i'll miss you.
             </div>
           </div>
         </div>
@@ -45,7 +45,7 @@
           <p>Harry Potter</p>
           <div class="overlay">
             <div class="text">
-              you are a wizard with how you switch from gaslighting to being an amazing friend so fast it gives me whiplash.
+              you are a wizard with how you switch from gaslighting to being an amazing friend so fast it gives me whiplash. i'm going to miss watching you terrorize people in person. although i do a fair share of terrorizing myself, but it's not the same without you.
             </div>
           </div>
         </div>
@@ -54,7 +54,7 @@
           <p>The Heroes of Olympus</p>
           <div class="overlay">
             <div class="text">
-              thank you for giving me the book <i>the lost hero</i>. i am glad that you (my hero) are not lost.
+              thank you for giving me the book <i>the lost hero</i>. i am glad that you (my hero) are not lost. despite my separation anxiety from you guys, i am in blissful denial that i will be leaving the country. let's have a fantastic end of senior year together and make the most out of these youthful moments!!
             </div>
           </div>
         </div>
@@ -62,7 +62,7 @@
           <p>Dork Diaries</p>
           <div class="overlay">
             <div class="text">
-              idk if u read this but i did and i will be the chloe/zoey bff to your main character nikki
+              idk if u read this series but i did and i will be the chloe/zoey bff to your main character nikki... some stuff bffs do includes having playdates, having inside jokes, having a class together, and keeping pacts they made in fifth grade...
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
           <p>Transformice</p>
           <div class="overlay">
             <div class="text">
-              <b>best. math class. ever.</b>
+              <b>best. math class. ever.</b> man transformice was so fun. do u remember the birthday card i made you of serenityxp the mouse? 
             </div>
           </div>
         </div>
@@ -87,7 +87,7 @@
           <p>Boxhead</p>
           <div class="overlay">
             <div class="text">
-              again. i have never taken a better math class.
+              again. i have never taken a better math class. we NEED to play again together. 
             </div>
           </div>
         </div>
@@ -95,10 +95,11 @@
           <p>My Little Pony</p>
           <div class="overlay">
             <div class="text">
-              THE POWER OF FRIENDSHIP!!!
+              last "book" is THE POWER OF FRIENDSHIP!!! thank u for being my friend :)))))) i was wondering to express the power of our friendship if you would come... <b>to check this website later today at around 5:45pm?</b>
             </div>
           </div>
         </div>
+	  <a href="">CLICK THIS BUTTON AFTER 5:30PM ON THURSDAY MAY 11TH 2023!!!</a>
   </section>
   </div>
     
