--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	<div id="website">
 		<h1>Welcome to Serenity's Library</h1>
     <span><b>in which i make our entreprenuerial dreams come ✨false✨</b><br><br>(anti capitalism! this website is ugly on purpose for a more homemade, camp, youthful friendship, slowness and smallness as a form of resistance, rhetorically sophisticated subversive way!)</span>
-    <br><br><br>
+    <br><a href="">CLICK THIS BUTTON AFTER 5:30PM ON THURSDAY MAY 11TH 2023!!!</a>
+		<br><br><br>
   <section class="library">
     <!-- ROBOT ROW 1 -->
         <div class="container">
@@ -99,7 +100,6 @@
             </div>
           </div>
         </div>
-	  <a href="">CLICK THIS BUTTON AFTER 5:30PM ON THURSDAY MAY 11TH 2023!!!</a>
   </section>
   </div>
     
