--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p>Harry Potter</p>
           <div class="overlay">
             <div class="text">
-              you are a wizard with how you switch from gaslighting to being an amazing friend so fast it gives me whiplash. i'm going to miss watching you terrorize people in person. although i do a fair share of terrorizing myself, but it's not the same without you.
+              you are a wizard with how you switch from gaslighting to being an amazing friend so fast it gives me whiplash. i'm going to miss watching you terrorize people in person.
             </div>
           </div>
         </div>
@@ -63,7 +63,7 @@
           <p>Dork Diaries</p>
           <div class="overlay">
             <div class="text">
-              idk if u read this series but i did and i will be the chloe/zoey bff to your main character nikki... some stuff bffs do includes having playdates, having inside jokes, having a class together, and keeping pacts they made in fifth grade...
+              idk if u read this series but i did and i will be the chloe/zoey bff to your main character nikki... some stuff bffs do includes being friends and keeping pacts they made in fifth grade...
             </div>
           </div>
         </div>
