--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   
 	<div id="website">
 		<h1>Welcome to Serenity's Library</h1>
-    <span><b>in which i make our entreprenuerial dreams come ✨false✨</b><br><br>(anti capitalism! this website is ugly on purpose for a more homemade, camp, youthful friendship, slowness and smallness as a form of resistance, rhetorically sophisticated subversive way!)</span>
-    <br><a href="" class='btn'>CLICK THIS BUTTON AFTER 5:30PM ON THURSDAY MAY 11TH 2023!!!</a>
+    <span><b>in which i make our entreprenuerial dreams come ✨false✨</b><br><br>(anti capitalism! this website is ugly on purpose for a more homemade, camp, youthful friendship, slowness and smallness as a form of resistance, rhetorically sophisticated subversive way! this library is a saga of us––messy and youthful and filled with random internet shit!)</span>
+    <br><br<br><a href="" class='btn'>CLICK THIS BUTTON AFTER 5:30PM ON THURSDAY MAY 11TH 2023!!!</a>
 		<br><br><br>
   <section class="library">
     <!-- ROBOT ROW 1 -->
